m3dc1_scorec and meshgen updated to support MIT

--- a/meshgen/CMakeLists.txt
+++ b/meshgen/CMakeLists.txt
@@ -116,15 +116,22 @@ if (ENABLE_PPPL)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPPPL")
 endif()
 
+if (ENABLE_MIT)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMIT")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMIT")
+endif()
+
 set(ENABLE_SIMMETRIX "ON")
 set(ENABLE_PETSC "OFF")
 set(ENABLE_TRILINOS "OFF")
-if (ENABLE_PPPL)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DPPPL")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPPPL")
+if (ENABLE_SIMLICENSE)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLICENSE")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLICENSE")
   find_package(SimModSuite QUIET REQUIRED)
+  find_package(Tirpc QUIET REQUIRED)
+  set(DEP_LIBS ${DEP_LIBS} ${TIRPC_LIBRARIES} )
 else()
-find_package(Simmetrix QUIET REQUIRED)
+  find_package(Simmetrix QUIET REQUIRED)
 endif()
 
 include_directories(${SIMMETRIX_INCLUDE_DIRS})
@@ -134,21 +141,25 @@ find_package(Lapack QUIET REQUIRED)
 set(DEP_LIBS ${DEP_LIBS} ${LAPACK_LIBRARIES} )
 
   add_executable(m3dc1_meshgen test/m3dc1_meshgen.cc)
+  target_include_directories(m3dc1_meshgen PUBLIC ${SIMMODSUITE_INCLUDE_DIR})
   target_link_libraries(m3dc1_meshgen ${DEP_LIBS})
   target_link_libraries(m3dc1_meshgen ${TARGET_LIB_NAME})
   INSTALL(TARGETS m3dc1_meshgen RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
   
   add_executable(m3dc1_mfmgen test/multi_meshgen.cc)
+  target_include_directories(m3dc1_mfmgen PUBLIC ${SIMMODSUITE_INCLUDE_DIR})
   target_link_libraries(m3dc1_mfmgen ${DEP_LIBS})
   target_link_libraries(m3dc1_mfmgen ${TARGET_LIB_NAME})
   INSTALL(TARGETS m3dc1_mfmgen RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 
   add_executable(polar_meshgen test/polar_meshgen.cc)
+  target_include_directories(polar_meshgen PUBLIC ${SIMMODSUITE_INCLUDE_DIR})
   target_link_libraries(polar_meshgen ${DEP_LIBS})
   target_link_libraries(polar_meshgen ${TARGET_LIB_NAME})
   INSTALL(TARGETS polar_meshgen RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 
   add_executable(convert_sms test/convert_sms.cc)
+  target_include_directories(convert_sms PUBLIC ${SIMMODSUITE_INCLUDE_DIR})
   target_link_libraries(convert_sms ${DEP_LIBS})
   target_link_libraries(convert_sms ${TARGET_LIB_NAME})
   INSTALL(TARGETS convert_sms RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
@@ -175,3 +186,4 @@ ${CMAKE_Fortran_COMPILER_FULLPATH}")
 message("CMAKE_Fortran_COMPILER = ${CMAKE_Fortran_COMPILER}")
 message("CMAKE_Fortran_FLAGS = ${CMAKE_Fortran_FLAGS}")
 message("CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
+message("DEP_LIBS = ${DEP_LIBS}")
