meshgen updated to support MIT

--- a/meshgen/CMakeLists.txt
+++ b/meshgen/CMakeLists.txt
@@ -128,7 +128,7 @@ if (ENABLE_SIMLICENSE)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLICENSE")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLICENSE")
   find_package(SimModSuite QUIET REQUIRED)
-  find_package(Tirpc QUIET REQUIRED)
+  #find_package(Tirpc QUIET REQUIRED)
   set(DEP_LIBS ${DEP_LIBS} ${TIRPC_LIBRARIES} )
 else()
   find_package(Simmetrix QUIET REQUIRED)
