m3dc1_meshgen for Stellar updated

--- a/meshgen/CMakeLists.txt
+++ b/meshgen/CMakeLists.txt
@@ -121,6 +121,11 @@ if (ENABLE_MIT)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMIT")
 endif()
 
+if (ENABLE_PU)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSTELLAR")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTELLAR")
+endif()
+
 set(ENABLE_SIMMETRIX "ON")
 set(ENABLE_PETSC "OFF")
 set(ENABLE_TRILINOS "OFF")
