fixing bugs re. snapping support

--- a/unstructured/makefile
+++ b/unstructured/makefile
@@ -47,7 +47,11 @@ else
   endif
 endif
 
-# determine whether to use stellarator extension
+ifeq ($(ADAPT), 1)
+  OPTS := $(OPTS) -DADAPT
+  BIN_POSTFIX := $(BIN_POSTFIX)-adapt
+endif
+
 ifeq ($(ST), 1)
   OPTS := $(OPTS) -DUSEST 
   BIN_POSTFIX := $(BIN_POSTFIX)-st
