add spack configuration files

--- a/unstructured/CMakeLists.txt
+++ b/unstructured/CMakeLists.txt
@@ -154,7 +154,7 @@ set(BIN_NAME m3dc1)
 #   list(APPEND DEFS -DPETSC_FORTRAN_PETSCTRUTH_INT -DPETSC_VERSION=${PETSC_VERSION})
 # endif()
 find_package(PkgConfig REQUIRED)
-list(APPEND PKG_CONFIG_EXECUTABLE "--static")
+# list(APPEND PKG_CONFIG_EXECUTABLE "--static")
 
 # pkg_check_modules (PETSC REQUIRED PETSc)
 pkg_search_module(PETSC PETSc IMPORTED_TARGET REQUIRED)
