--- a/unstructured/CMakeLists.txt
+++ b/unstructured/CMakeLists.txt
@@ -18,10 +18,11 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
-set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" ".so")
-if(BUILD_SHARED_LIBS)
-  set(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
-endif()
+# set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" ".so")
+# if(BUILD_SHARED_LIBS)
+  # set(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
+# endif()
+message(STATUS "Found PETSc ${CMAKE_FIND_LIBRARY_SUFFIXES}")
 
 # set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 # set(CMAKE_CXX_FLAGS_DEBUG "-g")
@@ -159,6 +160,7 @@ find_package(PkgConfig REQUIRED)
 # pkg_check_modules (PETSC REQUIRED PETSc)
 pkg_search_module(PETSC PETSc IMPORTED_TARGET REQUIRED)
 message(STATUS "Found PETSc ${PETSC_VERSION}")
+message(STATUS "Found PETSc ${CMAKE_Fortran_COMPILER_ID}")
 
 # foreach(ITR ${PETSC_LINK_LIBRARIES})
 #     if(ITR MATCHES "liblapack\.a")
@@ -176,6 +178,12 @@ message(STATUS "Found PETSc ${PETSC_VERSION}")
 set(PETSC_LINK_LIBRARIES "")
  # message(STATUS "Found PETSc ${PETSC_LINK_LIBRARIES}")
 message(STATUS "Found PETSc ${PETSC_STATIC_LDFLAGS}")
+# list(FIND PETSC_STATIC_LDFLAGS "-lmetis" _index)
+# math(EXPR _index "${_index}+1")
+# message(STATUS "Found PETSc ${_index}")
+# list(SUBLIST PETSC_STATIC_LDFLAGS 0 ${_index} PETSC_STATIC_LDFLAGS_MODIFIED)
+# message(STATUS "Found PETSc ${PETSC_STATIC_LDFLAGS_MODIFIED}")
+set(STATIC_LIST lapack blas)
 foreach (flag IN LISTS PETSC_STATIC_LDFLAGS)
   if (flag MATCHES "^-L(.*)")
     list(APPEND _search_paths ${CMAKE_MATCH_1})
@@ -183,6 +191,10 @@ foreach (flag IN LISTS PETSC_STATIC_LDFLAGS)
   endif()
   if (flag MATCHES "^-l(.*)")
     set(_pkg_search "${CMAKE_MATCH_1}")
+  endif()
+  if (${_pkg_search} IN_LIST STATIC_LIST)
+    message(STATUS "Found PETSc ${_pkg_search}")
+    set(_pkg_search "lib${_pkg_search}.a")
   endif()
 
   if(_search_paths)
@@ -201,13 +213,22 @@ foreach (flag IN LISTS PETSC_STATIC_LDFLAGS)
 endforeach()
 # message(STATUS "Found PETSc ${PETSC_LIBRARIES}")
 message(STATUS "Found PETSc ${PETSC_LINK_LIBRARIES}")
-
-list(FILTER PETSC_LINK_LIBRARIES EXCLUDE REGEX "libpthread")
+# list(TRANSFORM PETSC_LINK_LIBRARIES REPLACE "libpthread\.a" "libpthread.so")
+# list(FILTER PETSC_LINK_LIBRARIES EXCLUDE REGEX "libpthread")
+list(FILTER PETSC_LINK_LIBRARIES EXCLUDE REGEX "libcuda\.so")
+# list(FILTER PETSC_LINK_LIBRARIES EXCLUDE REGEX "libsci_cray\.a")
+# list(REMOVE_DUPLICATES PETSC_LINK_LIBRARIES)
 set_property(TARGET PkgConfig::PETSC PROPERTY
   INTERFACE_LINK_LIBRARIES "${PETSC_LINK_LIBRARIES}")
 
 pkg_search_module(FFTW fftw3 IMPORTED_TARGET REQUIRED)
+
 pkg_search_module(GSL gsl IMPORTED_TARGET REQUIRED)
+# list(FILTER GSL_LINK_LIBRARIES EXCLUDE REGEX "libm")
+# list(TRANSFORM GSL_LINK_LIBRARIES REPLACE "libm\.a" "libm.so")
+message(STATUS "Found gsl ${GSL_LINK_LIBRARIES}")
+# set_property(TARGET PkgConfig::GSL PROPERTY
+#   INTERFACE_LINK_LIBRARIES "${GSL_LINK_LIBRARIES}")
 
 #find_package(TRILINOS)
 # if(TRILINOS_FOUND AND USETRILINOS)
@@ -345,16 +366,28 @@ set_source_files_properties(
   OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/${BIN_NAME}.dir/scorec_mesh.f90.o
   )
 
+if (CMAKE_Fortran_COMPILER_ID STREQUAL "Cray")
+  set(CMAKE_Fortran_FLAGS_RELEASE "-O2")
+  set_source_files_properties( scorec_mesh.f90 PROPERTIES COMPILE_FLAGS -O0 )
+  set_source_files_properties( transport.f90 PROPERTIES COMPILE_FLAGS -O0 )
+  set_source_files_properties( particle.f90 PROPERTIES COMPILE_FLAGS -O1 )
+  set_source_files_properties( ludef_t.f90 PROPERTIES COMPILE_FLAGS -O0 )
+  set_source_files_properties( ludef_t_gpu.f90 PROPERTIES COMPILE_FLAGS -O0 )
+endif()
 add_executable(${BIN_NAME} ${SOURCES})
 # set_target_properties(${BIN_NAME} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${BIN_NAME}_mods)
 set_property(TARGET ${BIN_NAME} PROPERTY LINKER_LANGUAGE Fortran)
 target_include_directories(${BIN_NAME} PRIVATE ${SCOREC_INCLUDE_DIRS})
-target_link_libraries(${BIN_NAME} HDF5::HDF5
+target_link_libraries(${BIN_NAME} ${HDF5_HL_LIBRARIES} ${HDF5_LIBRARIES}
   ${M3DC1_SCOREC_LIB_NAME} ${SCOREC_LIBRARIES} ${ZOLTAN_LIBRARIES}
-  PkgConfig::PETSC PkgConfig::FFTW PkgConfig::GSL)
+  PkgConfig::PETSC PkgConfig::FFTW PkgConfig::GSL stdc++)
 # target_link_directories(m3dc1_2d ${PETSC_STATIC_LIBRARY_DIRECTORIES})
 target_compile_definitions(${BIN_NAME} PRIVATE ${DEFS})
-target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-r8>)
+if (CMAKE_Fortran_COMPILER_ID STREQUAL "Cray")
+  target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-s real64>)
+else()
+  target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-r8>)
+endif()
 install(TARGETS ${BIN_NAME} DESTINATION ".")
 
 #find_package(PSPLINE)
@@ -369,4 +402,6 @@ install(TARGETS ${BIN_NAME} DESTINATION ".")
 #target_compile_definitions(a2cc PUBLIC ${DEFS})
 
 #add_executable(kprad kprad.f90 kprad_test.f90)
+
+
 
