updating sdumont files

--- a/meshgen/CMakeLists.txt
+++ b/meshgen/CMakeLists.txt
@@ -126,6 +126,11 @@ if (ENABLE_PU)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTELLAR")
 endif()
 
+if (ENABLE_SDUMONT)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSDUMONT")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSDUMONT")
+endif()
+
 set(ENABLE_SIMMETRIX "ON")
 set(ENABLE_PETSC "OFF")
 set(ENABLE_TRILINOS "OFF")
