OPEN-ADAS coupling (#72)
* Modified workflow to read in Schaffer field with itaylor=41

* Fixed toroidal grid inconsistency in MGRID interface

* small changes to MIT compilation and regtests

* updating scorec libraries and meshgen on stellar/centos7

* updating scorec libraries on traverse

* turning on snapping in adaptation by default

* upgrade all on Korean KAIROS system

* add CMake files for M3D-C1

* fix CMake files for complex version

* add spack configuration files

* fix bug in CMake find_library

* fix CMake issues on Perlmutter and Frontier

* Initial commit for downloading and install ADAS

* Fix ADAS input and update .gitignore to ignore OPEN-ADAS files

* Fix ADAS module name

* Correct makefile for OPEN-ADAS

* More makefile corrections

* Updated read_neo_input

* updating sdumont files

* fixing crash on sdumont

* fixing crash of regtest/adapt due to outdated model file

* Changed write_neo_input variable name to B_Phi

* Updated Python documentation

* If PRES data is missing in the FIELDLINES file, give warning but not error

* replacing model files in regtest with the latest ones

* Updates to documentation for modules / building

* Added descriptions for NSTX first wall

* Added fallback to read raw_coil_cur from mgrid if external currents unavailable in VMEC

* fix bug in GS solver involving resistive walls

* mit scorec lib updates

* Changed cluster name from spark -> flux; added m3dc1/devel module for flux.  Doesn't yet build successfully because seems to be missing scorec libraries.

* Renamed the batchjob.spark scripts to batchjob.flux

* spark renamed flux

* Updated flux devel module to use srun with proper mpi flag rather than mpirun, for better compatibility with slurm

---------

Co-authored-by: Yao Zhou <yaozhou.pppl@gmail.com>
Co-authored-by: cclauser <44006297+cclauser@users.noreply.github.com>
Co-authored-by: Seegyoung Seol <sseol@sunfire10.pppl.gov>
Co-

--- a/unstructured/makefile
+++ b/unstructured/makefile
@@ -83,6 +83,8 @@ ifeq ($(TAU), 1)
   BIN_POSTFIX := $(BIN_POSTFIX)-tau
 endif
 
+
+
 # Define the size of sampling point arrays.
 # This sets the upper limit for number of points used
 # in numerical integrations
@@ -117,7 +119,6 @@ export USE3D
 export USERW
 export TAU
 export HPCTK
-
 include target.mk
 
 else
@@ -128,7 +129,14 @@ else
 
 VPATH=$(SRCDIR)
 
-USEADAS = 0
+ifeq ($(ADAS), 1)
+  USEADAS = 1
+  OPTS := $(OPTS) -DUSEADAS
+  ADAS_LIB := -L$(SRCDIR)/_$(ARCH) -ladaslib
+else
+  USEADAS = 0
+endif
+
 
 include $(SRCDIR)/$(ARCH).mk
 BIN = m3dc1
@@ -155,6 +163,7 @@ READGATO_OBJS = polar.o readgato.o
 READJSOLVER_OBJS = polar.o read_jsolver_exec.o
 
 ifeq ($(USEADAS), 1)
+  LIBS += $(ADAS_LIB)
   ADAS_OBJ = adas_m3dc1.o
 endif
 
@@ -226,6 +235,42 @@ kprad : kprad.f90 kprad_test.f90
 
 test_region : region.o test_region.o
 	$(F90) $^ -o $@
+
+OA_DATA = https://open.adas.ac.uk/download/adf11
+OA_OBJS = xxrptn.o xfelem.o i4unit.o i4fctn.o xxword.o xxcase.o \
+	xxslen.o xxdata_11.o
+.PHONY : download_open_adas
+download_open_adas :
+	rm -rf adf11
+	mkdir -p adf11/scd85 adf11/plt89 adf11/scd89 adf11/plt96 adf11/scd96
+	wget https://open.adas.ac.uk/code/xxdata_11.tar.gz
+	tar -zxf xxdata_11.tar.gz -C $(SRCDIR) --strip-components=1 --wildcards '*.for' --transform 's/\.for/.f/'
+	rm -rf xxdata_11.tar.gz
+	cd adf11/scd85 && \
+		wget $(OA_DATA)/scd85/scd85_ar.dat
+	cd adf11/scd89 && \
+		wget $(OA_DATA)/scd89/scd89_b.dat
+	cd adf11/plt89 && \
+		wget $(OA_DATA)/plt89/plt89_b.dat && \
+		wget $(OA_DATA)/plt89/plt89_ar.dat
+	cd adf11/scd96 && \
+		wget $(OA_DATA)/scd96/scd96_he.dat && \
+		wget $(OA_DATA)/scd96/scd96_be.dat && \
+		wget $(OA_DATA)/scd96/scd96_c.dat && \
+		wget $(OA_DATA)/scd96/scd96_ne.dat
+	cd adf11/plt96 && \
+		wget $(OA_DATA)/plt96/plt96_he.dat && \
+		wget $(OA_DATA)/plt96/plt96_be.dat && \
+		wget $(OA_DATA)/plt96/plt96_c.dat && \
+		wget $(OA_DATA)/plt96/plt96_ne.dat
+
+
+$(OA_OBJS) : %.o : $(SRCDIR)/%.f
+	$(F77) $(F77OPTS) $(INCLUDE) $< -o $@
+
+.PHONY : open_adas
+open_adas : download_open_adas $(OA_OBJS)
+	ar rcs libadaslib.a $(OA_OBJS)
 
 .PHONY : bin
 bin : a2cc mackenbach_profiles
