fix array initialization bugs with Cray compiler

--- a/unstructured/CMakeLists.txt
+++ b/unstructured/CMakeLists.txt
@@ -277,6 +277,18 @@ else ()
     message(FATAL_ERROR "HDF5 not found.")
 endif ()
 
+pkg_search_module(NETCDF netcdf IMPORTED_TARGET REQUIRED)
+message(STATUS "Found NetCDF ${NETCDF_VERSION}")
+pkg_search_module(NETCDF-Fortran netcdf-fortran IMPORTED_TARGET REQUIRED)
+message(STATUS "Found NetCDF-Fortran ${NETCDF-Fortran_VERSION}")
+
+# find_package(netCDF-Fortran REQUIRED)
+# if (netCDF_FOUND)
+#     message(STATUS "netCDF found: ${netCDF_VERSION}")
+# else ()
+#     message(FATAL_ERROR "netCDF not found.")
+# endif ()
+
 #find_package(ZLIB)
 # find_package(GSL REQUIRED)
 # find_package(FFTW REQUIRED)
@@ -287,6 +299,17 @@ set(M3DC1_SCOREC_LIB_NAME m3dc1_scorec)
 if(ENABLE_3D)
   set(BIN_NAME "${BIN_NAME}_3d")
   list(APPEND DEFS -DUSE3D -Dvectype=real -DMAX_PTS=125)
+  if(ENABLE_ST)
+    set(BIN_NAME "${BIN_NAME}_st")
+    list(APPEND DEFS -DUSEST)
+    # if(PAR)
+    #   set(POSTFIX "${POSTFIX}-pix")
+    # else()
+    #   set(POSTFIX "${POSTFIX}-complex")
+    # endif()
+  else()
+    list(APPEND DEFS -Dvectype=real)
+  endif()
   # set(POSTFIX "${POSTFIX}-125")
 else()
   set(BIN_NAME "${BIN_NAME}_2d")
@@ -380,7 +403,9 @@ add_executable(${BIN_NAME} ${SOURCES})
 # set_target_properties(${BIN_NAME} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${BIN_NAME}_mods)
 set_property(TARGET ${BIN_NAME} PROPERTY LINKER_LANGUAGE Fortran)
 target_include_directories(${BIN_NAME} PRIVATE ${SCOREC_INCLUDE_DIRS})
-target_link_libraries(${BIN_NAME} ${HDF5_HL_LIBRARIES} ${HDF5_LIBRARIES}
+target_link_libraries(${BIN_NAME} PkgConfig::NETCDF-Fortran PkgConfig::NETCDF
+  ${HDF5_HL_LIBRARIES} ${HDF5_LIBRARIES}
+ # netCDF::netcdff
   ${M3DC1_SCOREC_LIB_NAME} ${SCOREC_LIBRARIES} ${ZOLTAN_LIBRARIES}
   PkgConfig::PETSC PkgConfig::FFTW PkgConfig::GSL MPI::MPI_Fortran stdc++)
 # target_link_directories(m3dc1_2d ${PETSC_STATIC_LIBRARY_DIRECTORIES})
