Updated the kinetic module
- Added the option to simulate thermal ion as kinetic particles
- Enabled particle pushing using CPU through MPI
- Fixed errors in particle weight calculation for stellarators

Added an option to reduce the explicit term in Caramana method by a
factor

--- a/unstructured/CMakeLists.txt
+++ b/unstructured/CMakeLists.txt
@@ -330,6 +330,9 @@ else()
     list(APPEND DEFS -Dvectype=real)
   endif()
 endif()
+if(ENABLE_PARTICLE)
+  list(APPEND DEFS -DUSEPARTICLES)
+endif()
 
 # if(USEOMP)
 #   set(POSTFIX "${POSTFIX}-omp")
