Add option of slowing-down distribution of particles

--- a/unstructured/CMakeLists.txt
+++ b/unstructured/CMakeLists.txt
@@ -419,6 +419,8 @@ if (CMAKE_Fortran_COMPILER_ID STREQUAL "Cray")
   target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-s real64>)
 elseif (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
   target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-fdefault-real-8>)
+  target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-fallow-argument-mismatch>)
+  target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-ffree-line-length-512>)
 else()
   target_compile_options(${BIN_NAME} PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-r8>)
 endif()
