--- a/m3dc1_scorec/CMakeLists.txt
+++ b/m3dc1_scorec/CMakeLists.txt
@@ -175,18 +175,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPETSC_USE_COMPLEX")
 set(TARGET_LIB_NAME ${TARGET_LIB_NAME}_complex)
 endif()
 
-if(ENABLE_OPENMP)
-  if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
-  elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qopenmp")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
-  else()
-    message(WARNING "Unexpected compiler type ${CMAKE_CXX_COMPILER_ID}")
-  endif()
-  set(TARGET_LIB_NAME ${TARGET_LIB_NAME}_openmp)
-endif()
+# if(ENABLE_OPENMP)
+#   if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
+#     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+#   elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
+#     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qopenmp")
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
+#   else()
+#     message(WARNING "Unexpected compiler type ${CMAKE_CXX_COMPILER_ID}")
+#   endif()
+#   set(TARGET_LIB_NAME ${TARGET_LIB_NAME}_openmp)
+# endif()
 
 add_library(${TARGET_LIB_NAME} ${SOURCES})
 target_link_libraries(${TARGET_LIB_NAME} ${DEP_LIBS})
