updating config and sim license for MIT

--- a/meshgen/CMakeLists.txt
+++ b/meshgen/CMakeLists.txt
@@ -134,14 +134,15 @@ endif()
 set(ENABLE_SIMMETRIX "ON")
 set(ENABLE_PETSC "OFF")
 set(ENABLE_TRILINOS "OFF")
-if (ENABLE_SIMLICENSE)
+
+if (ENABLE_SCOREC)
+  find_package(Simmetrix QUIET REQUIRED)
+else()
+  if (ENABLE_SIMLICENSE)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLICENSE")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLICENSE")
+  endif()
   find_package(SimModSuite QUIET REQUIRED)
-  #find_package(Tirpc QUIET REQUIRED)
-  set(DEP_LIBS ${DEP_LIBS} ${TIRPC_LIBRARIES} )
-else()
-  find_package(Simmetrix QUIET REQUIRED)
 endif()
 
 include_directories(${SIMMETRIX_INCLUDE_DIRS})
