adding CAD options to meshgen

--- a/meshgen/CMakeLists.txt
+++ b/meshgen/CMakeLists.txt
@@ -145,8 +145,8 @@ else()
   find_package(SimModSuite QUIET REQUIRED)
 endif()
 
-include_directories(${SIMMETRIX_INCLUDE_DIRS})
-set(DEP_LIBS ${DEP_LIBS} ${SIMMETRIX_LIBRARIES} )
+include_directories(${SIMMODSUITE_INCLUDE_DIR})
+set(DEP_LIBS ${DEP_LIBS} ${SIMMODSUITE_LIBS} )
 set(TARGET_LIB_NAME ${TARGET_LIB_NAME}_simmetrix)
 find_package(Lapack QUIET REQUIRED)
 set(DEP_LIBS ${DEP_LIBS} ${LAPACK_LIBRARIES} )
