Fix CMake version GPU runtime error on Perlmutter.

--- a/unstructured/CMakeLists.txt
+++ b/unstructured/CMakeLists.txt
@@ -307,6 +307,10 @@ message(STATUS "Found NetCDF-Fortran ${NETCDF-Fortran_VERSION}")
 # find_package(FFTW REQUIRED)
 
 find_package(MPI REQUIRED)
+get_property(MPI_LINK_LIBRARIES TARGET MPI::MPI_Fortran PROPERTY INTERFACE_LINK_LIBRARIES)
+list(FILTER MPI_LINK_LIBRARIES EXCLUDE REGEX "libcuda\.so")
+set_property(TARGET MPI::MPI_Fortran PROPERTY
+  INTERFACE_LINK_LIBRARIES "${MPI_LINK_LIBRARIES}")
 
 set(M3DC1_SCOREC_LIB_NAME m3dc1_scorec)
 if(ENABLE_3D)
